<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_header"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_button"
        android:gravity="center"
        android:paddingHorizontal="12dp"
        android:paddingVertical="6dp"
        android:text="@string/main_title"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_header">

        <TextView
            android:id="@+id/tv_izquierda"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:text="@string/degrees_celsius"
            android:textColor="@color/gray"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/ib_central"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/bg_submit"
            android:contentDescription="@string/change"
            android:onClick="changeConversion"
            app:srcCompat="@drawable/ic_round_swap_gray" />

        <TextView
            android:id="@+id/tv_derecha"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:text="@string/degrees_fahrenheit"
            android:textColor="@color/gray"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/tv_desde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/tv_gc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_celsius"
            android:textColor="@color/gray" />

        <EditText
            android:id="@+id/et_valor"
            style="@android:style/Widget.Material.EditText"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/bg_button"
            android:backgroundTint="@color/black"
            android:defaultFocusHighlightEnabled="false"
            android:ems="10"
            android:focusedByDefault="false"
            android:gravity="center"
            android:hint="@string/value"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:textColorHighlight="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="34sp"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/tv_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/tv_gf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_fahrenheit"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/tv_resultado"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:hint="@string/result"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="34sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_submit"
        android:fontFamily="sans-serif"
        android:onClick="convert"
        android:text="@string/calculate"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>